context_free_grammar.txt
PROGRAM -> AGENT_LIST SYSTEM_BODY
AGENT_LIST -> AGENT_DEF AGENT_LIST | eps
AGENT_DEF -> agent id { AGENT_BODY }
AGENT_BODY -> TOOLS TASKS_DECLARATIONS
TOOLS -> TOOL_DECLARATION TOOLS | eps
TOOL_DECLARATION -> tool id
TASKS_DECLARATIONS -> TASK_DECLARATION TASKS_DECLARATIONS | eps
TASK_DECLARATION -> task id (TASK_ARGUMENTS) -> TASK_RETURN_TYPE { ACTIONS }
TASK_ARGUMENTS -> TASK_ARGUMENT TASK_ARGUMENTS_TAIL | eps
TASK_ARGUMENT -> TYPE id
TASK_ARGUMENTS_TAIL -> , TASK_ARGUMENT TASK_ARGUMENTS_TAIL | eps
TASK_RETURN_TYPE -> TYPE id
ACTIONS -> ACTION ACTIONS | eps
ACTION -> action: id (ACTION_ARGUMENTS)
ACTION_ARGUMENTS -> ACTION_ARGUMENT ACTION_ARGUMENTS_TAIL | eps
ACTION_ARGUMENT -> STRING_LIT | INT_LIT | BOOL_LIT | id
ACTION_ARGUMENTS_TAIL -> , ACTION_ARGUMENT ACTION_ARGUMENTS_TAIL | eps
SYSTEM_BODY -> system {STATEMENTS}
STATEMENTS -> STATEMENT STATEMENTS | eps
STATEMENT -> VARIABLE_DECLARATION | VARIABLE_ASSIGNMENT | FOR_STATEMENT | IF_STATEMENT
VARIABLE_DECLARATION -> TYPE id = EXPRESSION
EXPRESSION -> ADD_EXPR REL_TAIL
REL_TAIL -> OPERATION ADD_EXPR | eps
ADD_EXPR -> TERM ADD_TAIL
ADD_TAIL -> + TERM ADD_TAIL | - TERM ADD_TAIL | eps
TERM -> FACTOR TERM_TAIL
TERM_TAIL -> * FACTOR TERM_TAIL | / FACTOR TERM_TAIL | eps
FACTOR -> - FACTOR | INT_LIT | STRING_LIT | BOOL_LIT | id | ( EXPRESSION ) | FUNCTION_CALL | LIST_DECLARATION
FUNCTION_CALL -> run id . id (FUNCTION_ARGUMENTS)
FUNCTION_ARGUMENTS -> FUNCTION_ARGUMENT_LIST | eps
FUNCTION_ARGUMENT_LIST -> FUNCTION_ARGUMENT FUNCTION_ARGUMENT_TAIL
FUNCTION_ARGUMENT -> id
FUNCTION_ARGUMENT_TAIL -> , FUNCTION_ARGUMENT FUNCTION_ARGUMENT_TAIL | eps
LIST_DECLARATION -> [ LIST_ITEMS ]
LIST_ITEMS -> EXPRESSION LIST_ITEMS_TAIL | eps
LIST_ITEMS_TAIL -> , EXPRESSION LIST_ITEMS_TAIL | eps
OPERATION -> == | <= | < | >= | > | !=
VARIABLE_ASSIGNMENT -> id = EXPRESSION
FOR_STATEMENT -> for id in id {STATEMENTS}
IF_STATEMENT -> if EXPRESSION {STATEMENTS}
TYPE -> string | int | list | bool
